syntax = "proto3";

package user;

option go_package = "github.com/nuhmanudheent/go-microservices/api/grpc/protos;protos";

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}
